# msquic-h3

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Cargo.toml  README.md  vcpkg.json
.github/workflows/: build.yaml
crates/libs/msquic-h3/: Cargo.toml
crates/libs/msquic-h3-b/: Cargo.toml
crates/libs/msquic-h3-b/src/: lib.rs
crates/libs/msquic-h3/src/: buffer.rs  lib.rs  listener.rs
docs/: Development.md  README.md  architecture.md  callback-safety.md  error-model.md  error-propagation.md  receive-and-send.md  registration-lifecycle.md  registration-wait-idle-design.md  testing.md
docs/advanced/: app-owned-receive-buffers-evaluation.md  custom-execution-tokio-evaluation.md
msquic-h3/benches/: send_copy.rs
msquic-h3/src/: attest.rs  buffer.rs  callback.rs  config.rs  conformance.rs  connection.rs  error.rs  feature_config_negative.rs  lib.rs  listener.rs  opener.rs  registration.rs  send_seam.rs  stream.rs  terminal.rs  test.rs
