[package]
name = "msquic-h3"
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["youyuanwu@outlook.com"]
repository = "https://github.com/youyuanwu/msquic-h3"
documentation = "https://docs.rs/msquic-h3/latest/msquic-h3/"
description = "MsQuic with h3"
categories = ["web-programming", "network-programming"]
keywords = ["quic", "h3"]
readme = "./README.md"

[lib]
path = "msquic-h3/src/lib.rs"

[dependencies]
msquic = { version = "2.5.0-beta4", default-features = false }
tracing = { version = "0.1", optional = true }
bytes = "1"
h3 = "0.0.8"
futures = { version = "0.3", default-features = false, features = ["std"]}

[features]
# default = ["tracing"]
tracing = ["dep:tracing"]


[dev-dependencies]
http = "1.3"
tokio = {version = "1", features = ["full"]}
tracing-subscriber = "0.3"
tracing = { version = "0.1", features = ["log"] }
msquic = { version = "2.5.0-beta4", default-features = false, features = ["find"] }