[package]
name = "msquic-h3"
version = "0.0.6"
edition = "2024"
license = "MIT"
authors = ["youyuanwu@outlook.com"]
repository = "https://github.com/youyuanwu/msquic-h3"
documentation = "https://docs.rs/msquic-h3/latest/msquic-h3/"
description = "MsQuic with h3"
categories = ["web-programming", "network-programming"]
keywords = ["quic", "h3"]
readme = "./README.md"

[lib]
path = "msquic-h3/src/lib.rs"

[dependencies]
msquic = { version = "2.5.1-beta", default-features = false }
tracing = { version = "0.1", optional = true }
bytes = "1"
h3 = "0.0.8"
futures = { version = "0.3", default-features = false, features = ["std"]}

[features]
# default = ["tracing"]
tracing = ["dep:tracing"]

# Native-library provenance (MF-3). MUTUALLY EXCLUSIVE — enabling both selects
# `msquic/find` + `msquic/src`, which the msquic build script rejects with
# `feature src and find are mutually exclusive`. Because they cannot coexist,
# `--all-features` is NO LONGER a valid verification command (Phase 9 / plan S1);
# verify with a single provenance row instead, e.g.
#   cargo test --no-default-features --features native-find
# (system-package libmsquic; the canonical local invocation on this 2.5.8 host)
#   cargo test --no-default-features --features native-src
# (crate-built from the vendored msquic source via cmake).
native-find = ["msquic/find"] # system-package libmsquic (find::find symlinks it)
native-src = ["msquic/src"]   # crate-built from vendored source via cmake

# Committed bench feature (MF-4): gates the public
# `msquic_h3::bench_support::copy_into_send_buffer` re-export so the separate
# Criterion crate can reach the ONE production copy path.
bench-internals = []


[dev-dependencies]
http = "1"
tokio = {version = "1", features = ["full"]}
tracing-subscriber = "0.3"
tracing = { version = "0.1", features = ["log"] }
# Provenance is now selected by the committed `native-find` / `native-src`
# features above (not a hard-wired dev-dep feature), so exactly one native
# library is chosen per invocation from the command line. `native-find` is the
# canonical local row on this Linux/2.5.8 host.
msquic = { version = "2.5.1-beta", default-features = false }
criterion = { version = "0.5", features = ["html_reports"] }
# Backend feature exposes h3's internal `proto::frame::Frame` / `WriteBuf` builders
# so seam tests can construct a real data-carrying `WriteBuf<Bytes>` exactly as
# h3's own frontend does. Dev-only: not enabled for the published library build.
h3 = { version = "0.0.8", features = ["i-implement-a-third-party-backend-and-opt-into-breaking-changes"] }

[[bench]]
name = "send_copy"
path = "msquic-h3/benches/send_copy.rs"
harness = false                          # Criterion provides its own harness
required-features = ["bench-internals"]  # bench needs the gated public entry point
