[package]
name = "msquic-h3"
version = "0.0.7"
edition = "2024"
license = "MIT"
authors = ["youyuanwu@outlook.com"]
repository = "https://github.com/youyuanwu/msquic-h3"
documentation = "https://docs.rs/msquic-h3/latest/msquic-h3/"
description = "MsQuic with h3"
categories = ["web-programming", "network-programming"]
keywords = ["quic", "h3"]
readme = "./README.md"

# docs.rs build configuration (SF-L / FR-009). docs.rs defaults to `--all-features`,
# which enables both `native-find` + `native-src` and trips the upstream msquic
# build-script panic. Pin the self-contained `native-src` provenance (libmsquic
# built from vendored source via cmake — no preinstalled system library required,
# unlike `native-find`) and set `--cfg docsrs` so the crate-level neither-provenance
# guard in `src/lib.rs` is disabled for the link-free doc build.
[package.metadata.docs.rs]
no-default-features = true
features = ["native-src"]
rustdoc-args = ["--cfg", "docsrs"]

# Register the `docsrs` cfg (set by docs.rs / the doc build above) so it is a known
# cfg and `-D warnings` does not flag `unexpected_cfgs` (SF-L).
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(docsrs)'] }

[lib]
path = "msquic-h3/src/lib.rs"

[dependencies]
msquic = { version = "2.5.1-beta", default-features = false }
tracing = { version = "0.1", optional = true }
bytes = "1"
h3 = "0.0.8"
futures = { version = "0.3", default-features = false, features = ["std"]}

[features]
# default = ["tracing"]
tracing = ["dep:tracing"]

# Native-library provenance (MF-3). MUTUALLY EXCLUSIVE — enabling both selects
# `msquic/find` + `msquic/src`, which the msquic build script rejects with
# `feature src and find are mutually exclusive`. Because they cannot coexist,
# `--all-features` is NO LONGER a valid verification command (Phase 9 / plan S1);
# verify with a single provenance row instead, e.g.
#   cargo test --no-default-features --features native-find
# (system-package libmsquic; the canonical local invocation on this 2.5.8 host)
#   cargo test --no-default-features --features native-src
# (crate-built from the vendored msquic source via cmake).
# Selecting NEITHER is a supported type-check-only configuration (the crate
# compiles without linking a native library — the default-features CI check); a
# real build/link requires exactly one provenance. The BOTH-enabled case is
# bounded by the upstream build-script panic above (not intercepted at crate
# level). docs.rs builds under `native-src` via `[package.metadata.docs.rs]` above.
native-find = ["msquic/find"] # system-package libmsquic (find::find symlinks it)
native-src = ["msquic/src"]   # crate-built from vendored source via cmake

# Committed bench feature (MF-4): gates the public
# `msquic_h3::bench_support::copy_into_send_buffer` re-export so the separate
# Criterion crate can reach the ONE production copy path.
bench-internals = []


[dev-dependencies]
http = "1"
tokio = {version = "1", features = ["full"]}
tracing-subscriber = "0.3"
tracing = { version = "0.1", features = ["log"] }
# Provenance is now selected by the committed `native-find` / `native-src`
# features above (not a hard-wired dev-dep feature), so exactly one native
# library is chosen per invocation from the command line. `native-find` is the
# canonical local row on this Linux/2.5.8 host.
msquic = { version = "2.5.1-beta", default-features = false }
criterion = { version = "0.8", features = ["html_reports"] }
# Backend feature exposes h3's internal `proto::frame::Frame` / `WriteBuf` builders
# so seam tests can construct a real data-carrying `WriteBuf<Bytes>` exactly as
# h3's own frontend does. Dev-only: not enabled for the published library build.
h3 = { version = "0.0.8", features = ["i-implement-a-third-party-backend-and-opt-into-breaking-changes"] }

[[bench]]
name = "send_copy"
path = "msquic-h3/benches/send_copy.rs"
harness = false                          # Criterion provides its own harness
required-features = ["bench-internals"]  # bench needs the gated public entry point
