[package]
name = "msquic-h3"
version = "0.1.0"
edition = "2021"

[dependencies]
msquic.workspace =true
tracing = { version = "0.1", optional = true }
bytes = "*"
h3 = "0.0.6"
tokio = {version = "1", features = ["sync"]}
futures-util = "*"

[features]
# default = ["tracing"]
tracing = ["dep:tracing"]


[dev-dependencies]
http = "*"
tokio = {version = "1", features = ["full"]}
tracing-subscriber = "*"
tracing = { version = "0.1", features = ["log"] }